# whippet-autotools

./: .gitignore  Makefile.am  README.md  configure.ac
